resources/environments/gke.cluster01/prometheus-operator-ingress.yaml
##
# We need to set some configuration and paths here that we can't express
# through the helm chart. Disabling the ingress from the helm chart and
# deploying it this way.
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    external-dns.alpha.kubernetes.io/hostname: google.gradeous.io
  labels:
    app: prometheus-ingress
  name: prometheus-operator-prometheus
  namespace: monitoring
spec:
  rules:
  - host: prometheus.google.gradeous.io
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-operator-prometheus
          servicePort: 9090
  - host: grafana.google.gradeous.io
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-operator-grafana
          servicePort: 3000



# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
#     nginx.ingress.kubernetes.io/rewrite-target: /
# #    nginx.ingress.kubernetes.io/rewrite-target: /$1
#   labels:
#     app: prometheus-ingress
#   name: prometheus-operator-prometheus
#   namespace: monitoring
# spec:
#   rules:
#   - http:
#       paths:
#        - path: /hello
# #      - path: /hello/?(.*)
#         backend:
#           serviceName: prometheus-operator-prometheus
#           servicePort: 9090
